# esp-amp

./: .gitlab-ci.yml  README.md
.gitlab/: build.yml  extra.yml  template.yml  test.yml  test_with_retries.sh
components/esp_amp/: CMakeLists.txt  Kconfig
components/esp_amp/cmake/: subcore_project.cmake
components/esp_amp/idf_stub/esp_pm/: Kconfig
components/esp_amp/idf_stub/esp_system/: CMakeLists.txt  app.lf  arith64.c  syscalls.c
components/esp_amp/idf_stub/esp_system/ld/: ld.cmake
components/esp_amp/idf_stub/esp_system/ld/esp32c5/: memory.ld.in
components/esp_amp/idf_stub/esp_system/ld/esp32c6/: memory.ld.in  sections.ld.in
components/esp_amp/idf_stub/esp_system/ld/esp32p4/: memory.ld.in  sections.ld.in
components/esp_amp/idf_stub/esp_system/port/soc/esp32p4/: port.c
components/esp_amp/idf_stub/log/: esp_log.h
components/esp_amp/include/: esp_amp_sys_info.h
components/esp_amp/port/include/: esp_amp_arch.h  esp_amp_platform.h
components/esp_amp/port/platform/hp_core/: esp_amp_platform.c
components/esp_amp/port/platform/lp_core/: esp_amp_platform.c
components/esp_amp/priv_include/: esp_amp_mem_priv.h
components/esp_amp/src/: esp_amp_queue.c  esp_amp_rpmsg.c  esp_amp_sw_intr.c  esp_amp_sys_info.c
components/esp_amp/src/event/baremetal/: esp_amp_event.c
components/esp_amp/src/event/freertos/: esp_amp_event.c
components/esp_amp/src/rpc/: esp_amp_rpc_client.c  esp_amp_rpc_server.c
components/esp_amp/system/: esp_amp_loader.c  esp_amp_pm.c  esp_amp_system.c
components/esp_amp/system/esp_amp_panic/: panic_common.c  panic_maincore.c  panic_subcore.c
components/esp_amp/system/include/: esp_amp_panic.h  esp_amp_pm.h
components/esp_amp/system/priv_include/: esp_amp_panic_priv.h  esp_amp_pm_priv.h
docs/: light_sleep.md  memory_layout.md  shared_memory.md  subcore_build_tips.md
examples/build_system/separate_build/maincore_project/: sdkconfig.defaults.esp32c5
examples/build_system/unified_build/subcore/main/: main.c
examples/light_sleep/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/light_sleep/common/: event.h
examples/light_sleep/maincore/main/: app_main.c
examples/light_sleep/subcore/: subcore_config.cmake
examples/light_sleep/subcore/components/add/: CMakeLists.txt  add.c  add.h  add.lf
examples/light_sleep/subcore/components/myrand/: CMakeLists.txt  myrand.c  myrand.h  myrand.lf
examples/light_sleep/subcore/main/: CMakeLists.txt  main.c  main.lf
examples/rpc/maincore_client_subcore_server/: sdkconfig.defaults.esp32c5
test_apps/: README.md
test_apps/esp_amp_basic_tests/: sdkconfig.defaults  sdkconfig.defaults.esp32c6
test_apps/esp_amp_basic_tests/maincore/: CMakeLists.txt  test_libc_main.c  test_panic_main.c  test_queue_main.c  test_rpc_main.c
test_apps/esp_amp_basic_tests/subcore/test_libc/main/: main.cpp
test_apps/esp_amp_basic_tests/subcore/test_panic/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_basic_tests/subcore/test_panic/main/: main.c
test_apps/esp_amp_basic_tests/subcore/test_queue/main/: main.c
test_apps/esp_amp_basic_tests/subcore/test_rpc/main/: main.c
test_apps/esp_amp_light_sleep_tests/: pytest_esp_amp_basic_tests.py  sdkconfig.defaults
test_apps/esp_amp_light_sleep_tests/maincore/: CMakeLists.txt  test_app_main.c  test_event_main.c  test_panic_main.c  test_queue_main.c  test_rpmsg_main.c  test_sw_intr_main.c
test_apps/esp_amp_light_sleep_tests/subcore/test_event/main/: CMakeLists.txt  main.c
test_apps/esp_amp_light_sleep_tests/subcore/test_panic/main/: main.c
test_apps/esp_amp_light_sleep_tests/subcore/test_queue/: CMakeLists.txt  subcore_config.cmake
test_apps/esp_amp_light_sleep_tests/subcore/test_queue/main/: main.c
test_apps/esp_amp_light_sleep_tests/subcore/test_rpmsg/main/: main.c
test_apps/esp_amp_light_sleep_tests/subcore/test_sw_intr/main/: main.c
